Fixed wrong font famliy name

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,7 @@
 #css-detect { --css-loaded: 1; display: none; }
 /* style.css */
 @font-face {
-    font-family: "ZhuZiAWan";
+    font-family: "Microsoft YaHei";
     /*src:url("../font/ZhuZiAWan-JetBrainsMono.woff2") format("woff2");*/
     src:url("../font/ZhuZiAWan-JetBrainsMono.ttf");
     font-weight: 900;
